--- a/packages/embed/index.html
+++ b/packages/embed/index.html
@@ -21,7 +21,7 @@
   <h1 class="center pull-down">Your SaaS</h1>
   <h2 class="center">Deserves Great Support.</h2>
   <div id="app"></div>
-  <script type="module" src="/src/embed.ts"></script>
+  <script type="module" src="/src/main.ts"></script>
   <script>
     window.addEventListener("DOMContentLoaded", () => {
       initZygWidgetScript({
